# omros2-firmware

./: .clang-format  .gitignore  Makefile  README.md  platformio.ini
.github/actions/platformio-env/: action.yml
.github/micro-ros/: Dockerfile
.github/workflows/: build.yaml  micro-ros-image.yaml
extra_packages/omros2_firmware_msgs/: CMakeLists.txt  package.xml
extra_packages/omros2_firmware_msgs/msg/: EmergencyStatus.msg  PowerStatus.msg
src/: emergency.cpp  emergency.h  hardware.h  imu.cpp  imu.h  led_status.hpp  main.cpp  pins.h  ros.cpp  ros.h
test/hil/: emergency_interactive.py
utils/: exec-in-micro-ros-agent.sh  extra.py  remote-forward-agent-tcp.sh  remote-openocd.sh  run-micro-ros-agent.sh
